--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,19 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+env_default = leonardo
+
 [env:nanoatmega328]
 platform = atmelavr
 board = nanoatmega328
 framework = arduino
+build_flags = -D BUILD_FOR_NANO
+src_filter = +<*> +<ewick/> -<bonsai/>
+
+[env:leonardo]
+platform = atmelavr
+board = leonardo
+framework = arduino
+build_flags = -D BUILD_FOR_LEONARDO
+src_filter = +<*> -<ewick/> +<bonsai/>
